<resources>
    <string name="app_name">COVIDapp</string>
    <string name="title_home">About Location</string>
    <string name="title_dashboard">Graphs/Statistics</string>
    <string name="title_notifications">News</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="question2">Have You Completed Quarentine (14 Days)?</string>
    <string name="question1">Have You been out of the Country?</string>
    <string name="question3">Have You Tested Positive or shown Symptoms of COVID19 in last 14 days?</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="question4">How lkely do you think this disease will reoccur?</string>
    <string name="compare">Compare</string>
    <string name="date">Date</string>
    <string name="area_stats">User Stats</string>
    <string name="location_stats">Location Stats</string>
    <string name="news">News</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="minimum_6_char">minimum 6 char</string>
    <string name="Logout">logout</string>
    <string name="select_image">Select Image</string>

</resources>
